--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
+    "babel-plugin-tsconfig-paths": "^1.0.3",
     "typescript": "^4.8.2",
     "webpack-cli": "^4.10.0"
   }
