--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "out/app.js",
   "scripts": {
     "build": "webpack build --env buildtype=app --mode=production",
-    "buildp": "webpack build --env buildtype=plugins --mode=production",
     "dbuild": "webpack build --env buildtype=app --mode=development",
-    "dbuildp": "webpack build --env buildtype=plugins --mode=development",
-    "start": "npm run build && node ./out/app.js",
-    "watch": "webpack build --env buildtype=app --mode=development -w",
-    "watchp": "webpack build --env buildtype=plugins --mode=development -w"
+    "start": "npm run build && clear && node ./out/app.js",
+    "dstart": "npm run dbuild && clear && node ./out/app.js",
+    "watch": "webpack build --env buildtype=app --mode=development -w"
   },
   "author": "ehdes",
   "license": "MIT",
@@ -18,10 +16,14 @@
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.13",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "typescript": "^4.8.2",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
