--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
+    "@types/react": "^18.0.18",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-tsconfig-paths": "^1.0.3",
+    "raw-loader": "^4.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.8.2",
     "webpack-cli": "^4.10.0"
   },
