--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "webbase v4 typescript",
   "main": "out/app.js",
   "scripts": {
-    "build": "webpack build --env buildtype=app --mode=production",
-    "dbuild": "webpack build --env buildtype=app --mode=development",
+    "build": "webpack build --env buildtype=app --mode=production && webpack build --env buildtype=web --mode=production",
+    "dbuild": "webpack build --env buildtype=app --mode=development && webpack build --env buildtype=web --mode=development",
     "start": "npm run build && (clear || cls) && node ./out/app.js",
     "dstart": "npm run dbuild && (clear || cls) && node ./out/app.js",
-    "watch": "webpack build --env buildtype=app --mode=development -w"
+    "watch": "webpack build --env buildtype=app --mode=development -w",
+    "watchWeb": "webpack build --env buildtype=web --mode=development -w"
   },
   "author": "ehdes",
   "license": "MIT",
@@ -18,16 +19,21 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
     "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-tsconfig-paths": "^1.0.3",
-    "raw-loader": "^4.0.2",
+    "i": "^0.3.7",
+    "npm": "^8.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.2",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^9.0.0"
   }
 }
