--- a/package.json
+++ b/package.json
@@ -24,10 +24,19 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-tsconfig-paths": "^1.0.3",
+    "css-loader": "^6.7.1",
     "i": "^0.3.7",
     "npm": "^8.19.1",
+    "postcss": "^8.4.16",
+    "postcss-import": "^15.0.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
