--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "knex": "^2.3.0",
+    "sqlite3": "^5.0.11",
     "uuid": "^9.0.0"
   }
 }
