--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
             "@logic/*": ["logic/*"],
             "@service/*": ["service/*"]
         },
+        "esModuleInterop": true,
         "jsx": "react"
     },
     "include": [
