--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
@@ -47,6 +48,7 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.0",
     "knex": "^2.3.0",
+    "nodemailer": "^6.8.0",
     "sqlite3": "^5.0.11",
     "uuid": "^9.0.0"
   }
