--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
+    "@types/jest": "^29.2.4",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
@@ -27,8 +28,7 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "css-loader": "^6.7.1",
-    "i": "^0.3.7",
-    "npm": "^8.19.1",
+    "jest": "^29.3.1",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
     "postcss-loader": "^7.0.1",
@@ -39,6 +39,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.2",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
@@ -48,6 +49,7 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.0",
     "knex": "^2.3.0",
+    "mime": "^3.0.0",
     "nodemailer": "^6.8.0",
     "sqlite3": "^5.0.11",
     "uuid": "^9.0.0"
