--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 extensions/*
 !extensions/Core*
-!extensions/Custom.Template.ts
+!extensions/Custom.Template/
 !extensions/Custom.Template.webpack.json
 cfg/*
 extensions/disabled.json
