--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
+    "@types/express-ws": "^3.0.1",
     "@types/jest": "^29.2.4",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.18",
@@ -47,6 +48,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-ws": "^5.0.2",
     "helmet": "^6.0.0",
     "knex": "^2.3.0",
     "mime": "^3.0.0",
