--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "npm run build && (clear || cls) && node ./out/app.js",
     "dstart": "npm run dbuild && (clear || cls) && DEBUG=true node ./out/app.js",
     "watch": "webpack build --env buildtype=app --mode=development -w",
-    "watchWeb": "webpack build --env buildtype=web --mode=development -w"
+    "watchWeb": "webpack build --env buildtype=web --mode=development -w",
+    "pwatchWeb": "webpack build --env buildtype=web --mode=production -w"
   },
   "author": "ehdes",
   "license": "MIT",
@@ -28,6 +29,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-tsconfig-paths": "^1.0.3",
+    "babel-preset-minify": "^0.5.2",
     "css-loader": "^6.7.1",
     "jest": "^29.3.1",
     "postcss": "^8.4.16",
@@ -49,6 +51,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
+    "graphql": "^16.6.0",
+    "graphql-http": "^1.16.0",
+    "graphql-tools": "^8.3.18",
     "helmet": "^6.0.0",
     "knex": "^2.3.0",
     "mime": "^3.0.0",
