--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dstart": "npm run dbuild && (clear || cls) && DEBUG=true node ./out/app.js",
     "watch": "webpack build --env buildtype=app --mode=development -w",
     "watchWeb": "webpack build --env buildtype=web --mode=development -w",
-    "pwatchWeb": "webpack build --env buildtype=web --mode=production -w"
+    "pwatchWeb": "webpack build --env buildtype=web --mode=production -w",
+    "generateDocs": "typedoc --out docs --basePath ./src --entryPointStrategy expand ./src"
   },
   "author": "ehdes",
   "license": "MIT",
@@ -43,6 +44,8 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
+    "typedoc": "^0.23.25",
+    "typedoc-plugin-rename-defaults": "^0.6.4",
     "typescript": "^4.8.2",
     "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0"
