continued working on Dashboard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "paths": {
             "@app/*": ["application/*"],
             "@logic/*": ["logic/*"],
-            "@service/*": ["service/*"]
+            "@service/*": ["service/*"],
+            "@extensions/*": ["../extensions/*"]
         },
         "esModuleInterop": true,
         "jsx": "react"
