--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "watch": "webpack build --env buildtype=app --mode=development -w",
     "watchWeb": "webpack build --env buildtype=web --mode=development -w",
     "pwatchWeb": "webpack build --env buildtype=web --mode=production -w",
-    "generateDocs": "typedoc --out docs --basePath ./src --entryPointStrategy expand ./src"
+    "generateDocs": "typedoc --out docs --basePath ./src --entryPointStrategy expand ./src",
+    "lint": "eslint . --ext ts"
   },
   "author": "ehdes",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -28,11 +31,14 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "babel": "^6.23.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "babel-preset-minify": "^0.5.2",
     "css-loader": "^6.7.1",
+    "eslint": "^8.36.0",
     "jest": "^29.3.1",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
