--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "src/**/*.tsx",
         "src/**/*.js",
         "src/**/*.jsx",
+        "test/**/*.test.ts",
         "extensions/**/*.ts",
         "extensions/**/*.tsx",
         "extensions/**/*.js",
