--- a/.eslintrc
+++ b/.eslintrc
@@ -57,11 +57,11 @@
          */
         "no-shadow": 2,                     // http://eslint.org/docs/rules/no-shadow
         "no-shadow-restricted-names": 2,    // http://eslint.org/docs/rules/no-shadow-restricted-names
-        "no-unused-vars": [2, {             // http://eslint.org/docs/rules/no-unused-vars
+        "no-unused-vars": [1, {             // http://eslint.org/docs/rules/no-unused-vars
             "vars": "local",
             "args": "after-used"
         }],
-        "no-use-before-define": 2,          // http://eslint.org/docs/rules/no-use-before-define
+        "no-use-before-define": 0,          // http://eslint.org/docs/rules/no-use-before-define
         /**
          * Possible errors
          */
@@ -198,7 +198,7 @@
         "space-after-keywords": 0,          // http://eslint.org/docs/rules/space-after-keywords
         "space-before-blocks": [2, {        // http://eslint.org/docs/rules/space-before-blocks
             "functions": "never", 
-            "keywords": "never", 
+            "keywords": "always", 
             "classes": "always"
         }],
         "keyword-spacing": [0, {            // http://eslint.org/docs/rules/keyword-spacing
