--- a/.eslintrc
+++ b/.eslintrc
@@ -55,11 +55,16 @@
         /**
          * Variables
          */
-        "no-shadow": 2,                     // http://eslint.org/docs/rules/no-shadow
-        "no-shadow-restricted-names": 2,    // http://eslint.org/docs/rules/no-shadow-restricted-names
-        "no-unused-vars": [1, {             // http://eslint.org/docs/rules/no-unused-vars
+        //"no-shadow": 2,                     // http://eslint.org/docs/rules/no-shadow
+        "@typescript-eslint/no-shadow": "error",
+        "no-shadow-restricted-names": 2,      // http://eslint.org/docs/rules/no-shadow-restricted-names
+        //"no-unused-vars": [1, {             // http://eslint.org/docs/rules/no-unused-vars
+        //    "vars": "local",
+        //    "args": "none"
+        //}],
+        "@typescript-eslint/no-unused-vars": [1, {             // http://eslint.org/docs/rules/no-unused-vars
             "vars": "local",
-            "args": "after-used"
+            "args": "none"
         }],
         "no-use-before-define": 0,          // http://eslint.org/docs/rules/no-use-before-define
         /**
@@ -97,7 +102,11 @@
         "array-callback-return": [2, {      // http://eslint.org/docs/rules/array-callback-return
             "allowImplicit": true
         }],
-        "consistent-return": 1,             // http://eslint.org/docs/rules/consistent-return
+        //"consistent-return": 1,           // http://eslint.org/docs/rules/consistent-return
+        // TODO: enable this rule
+        //"@typescript-eslint/explicit-function-return-type": [2, {
+        //    "allowExpressions": true
+        //}],
         "curly": [2, "multi-line"],         // http://eslint.org/docs/rules/curly
         "default-case": 2,                  // http://eslint.org/docs/rules/default-case
         "dot-notation": [2, {               // http://eslint.org/docs/rules/dot-notation
@@ -190,14 +199,15 @@
         "no-underscore-dangle": 0,          // http://eslint.org/docs/rules/no-underscore-dangle
         "one-var": [2, "never"],            // http://eslint.org/docs/rules/one-var
         "padded-blocks": [2, "never"],      // http://eslint.org/docs/rules/padded-blocks
-        "semi": [2, "always"],              // http://eslint.org/docs/rules/semi
+        //"semi": [2, "always"],            // http://eslint.org/docs/rules/semi
+        "@typescript-eslint/semi": [2, "always"],
         "semi-spacing": [2, {               // http://eslint.org/docs/rules/semi-spacing
             "before": false,
             "after": true
         }],
         "space-after-keywords": 0,          // http://eslint.org/docs/rules/space-after-keywords
         "space-before-blocks": [2, {        // http://eslint.org/docs/rules/space-before-blocks
-            "functions": "never", 
+            "functions": "always", 
             "keywords": "always", 
             "classes": "always"
         }],
