--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "watchWeb": "webpack build --env buildtype=web --mode=development -w",
     "pwatchWeb": "webpack build --env buildtype=web --mode=production -w",
     "generateDocs": "typedoc --out docs --basePath ./src --entryPointStrategy expand ./src",
-    "lint": "eslint . --ext ts"
+    "lint": "eslint . --ext ts",
+    "log": "cat $(ls -t logs/* | head -1) | vim - -c 'set filetype=messages'",
+    "jsonlog": "cat $(ls -t jsonlogs/* | head -1) | vim - -c 'set filetype=messages'"
   },
   "author": "ehdes",
   "license": "MIT",
