cleaned build configs

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
-    "env": {
-        "production": {
-            "presets": ["minify"]
-        }
-    }
+    "presets": [["minify", {
+        "mangle": false
+    }]],
+    "comments": false
 }
