--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
