--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
             "@extensions/*": ["../extensions/*"]
         },
         "esModuleInterop": true,
-        "jsx": "react"
+        "jsx": "react",
+        "experimentalDecorators": true
     },
     "include": [
         "src/**/*.ts",
