--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pwatchWeb": "webpack build --env buildtype=web --mode=production -w",
     "generateDocs": "typedoc --out docs --basePath ./src --entryPointStrategy expand ./src",
     "lint": "eslint . --ext ts",
-    "extinit": "node ./src/install.js --extinit"
+    "extinit": "node ./src/install.js --extinit",
+    "test": "jest"
   },
   "author": "ehdes",
   "license": "MIT",
@@ -53,6 +54,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.0.3",
+    "tsconfig-paths-jest": "^0.0.1",
     "typedoc": "^0.23.25",
     "typedoc-plugin-rename-defaults": "^0.6.4",
     "typescript": "^4.8.2",
