--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
         "src/**/*.tsx",
         "src/**/*.js",
         "src/**/*.jsx",
-        "test/**/*.test.ts",
+        "test/**/*.ts",
         "extensions/**/*.ts",
         "extensions/**/*.tsx",
         "extensions/**/*.js",
