--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
     "cssnano": "^6.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
