--- a/package.json
+++ b/package.json
@@ -70,13 +70,11 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
-    "graphql": "^16.6.0",
-    "graphql-http": "^1.16.0",
-    "graphql-tools": "^8.3.18",
     "helmet": "^6.0.0",
-    "knex": "^2.3.0",
     "mime": "^3.0.0",
     "minimist": "^1.2.8",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "sqlite3": "^5.0.11",
