--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "cssnano": "^6.0.1",
     "express": "^4.18.1",
