--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "webbase v4 typescript",
   "main": "out/app.js",
   "scripts": {
-    "build": "webpack build --env buildtype=app --mode=production && webpack build --env buildtype=web --mode=production",
-    "dbuild": "webpack build --env buildtype=app --mode=development && webpack build --env buildtype=web --mode=development",
+    "build": "webpack build --env buildtype=app --mode=production && node ./src/buildWeb.js --mode=production",
+    "dbuild": "webpack build --env buildtype=app --mode=development && node ./src/buildWeb.js --mode=development",
     "start": "npm run build && (clear || cls) && node ./out/app.js",
     "dstart": "npm run dbuild && (clear || cls) && DEBUG=true node ./out/app.js",
     "watch": "webpack build --env buildtype=app --mode=development -w",
-    "watchWeb": "webpack build --env buildtype=web --mode=development -w",
-    "pwatchWeb": "webpack build --env buildtype=web --mode=production -w",
+    "watchWeb": "node ./src/buildWeb.js --mode=production -w",
+    "dwatchWeb": "node ./src/buildWeb.js --mode=development -w",
     "generateDocs": "typedoc --out docs --basePath ./src --entryPointStrategy expand ./src",
     "lint": "eslint . --ext ts",
     "extinit": "node ./src/install.js --extinit",
@@ -41,6 +41,7 @@
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "babel-preset-minify": "^0.5.2",
     "css-loader": "^6.7.1",
+    "esbuild": "0.20.1",
     "eslint": "^8.36.0",
     "jest": "^29.3.1",
     "postcss": "^8.4.16",
@@ -69,6 +70,7 @@
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.5",
     "cssnano": "^6.0.1",
+    "esbuild-sass-plugin": "^3.1.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
