--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "babel-preset-minify": "^0.5.2",
     "css-loader": "^6.7.1",
-    "esbuild": "0.20.1",
+    "esbuild": "^0.25.0",
     "eslint": "^8.36.0",
     "jest": "^29.3.1",
     "postcss": "^8.4.16",
