--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express-ws": "^3.0.1",
     "@types/jest": "^29.2.4",
     "@types/minimist": "^1.2.2",
+    "@types/node": "^24.0.4",
     "@types/node-cron": "^3.0.7",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.18",
