--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "declaration": false,
         "noEmit": true,
         "isolatedModules": true,
-        "baseUrl": ".",
+        "baseUrl": "./",
         "paths": {
             "@app/*": ["src/application/*"],
             "@logic/*": ["src/logic/*"],
