--- a/package.json
+++ b/package.json
@@ -19,71 +19,72 @@
   "author": "ehdes",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.5",
-    "@types/express-ws": "^3.0.1",
-    "@types/jest": "^29.2.4",
-    "@types/minimist": "^1.2.2",
-    "@types/node": "^24.0.4",
-    "@types/node-cron": "^3.0.7",
-    "@types/nodemailer": "^6.4.6",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@babel/core": "^7.28.5",
+    "@babel/eslint-parser": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
+    "@types/express-ws": "^3.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/minimist": "^1.2.5",
+    "@types/node": "^24.10.1",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/uuid": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "babel": "^6.23.0",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^10.0.0",
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "babel-preset-minify": "^0.5.2",
-    "css-loader": "^6.7.1",
-    "esbuild": "^0.25.0",
-    "eslint": "^8.36.0",
-    "jest": "^29.3.1",
-    "postcss": "^8.4.16",
-    "postcss-import": "^15.0.0",
-    "postcss-loader": "^7.0.1",
-    "postcss-preset-env": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.54.9",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.0.3",
+    "css-loader": "^7.1.2",
+    "esbuild": "^0.27.0",
+    "eslint": "^9.39.1",
+    "jest": "^30.2.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-loader": "^8.2.0",
+    "postcss-preset-env": "^10.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "sass": "^1.94.2",
+    "sass-loader": "^16.0.6",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.17",
+    "ts-jest": "^29.4.5",
     "tsconfig-paths-jest": "^0.0.1",
-    "typedoc": "^0.23.25",
-    "typedoc-plugin-rename-defaults": "^0.6.4",
-    "typescript": "^4.8.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-merge": "^5.8.0"
+    "typedoc": "^0.28.14",
+    "typedoc-plugin-rename-defaults": "^0.7.3",
+    "typescript": "^5.9.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.21.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@mui/x-data-grid": "^6.19.5",
-    "cssnano": "^6.0.1",
-    "esbuild-sass-plugin": "^3.1.0",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@mui/x-data-grid": "^8.20.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "cssnano": "^7.1.2",
+    "esbuild-sass-plugin": "^3.3.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "express-ws": "^5.0.2",
-    "helmet": "^6.0.0",
-    "mime": "^3.0.0",
+    "helmet": "^8.1.0",
+    "mime": "^4.1.0",
     "minimist": "^1.2.8",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3",
-    "node-cron": "^3.0.2",
-    "nodemailer": "^7.0.10",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
     "sqlite3": "^5.1.7",
-    "tailwind-merge": "^1.13.2",
-    "uuid": "^9.0.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0"
   }
 }
