--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typedoc": "^0.28.14",
     "typedoc-plugin-rename-defaults": "^0.7.3",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
     "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1"
   },
