--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^7.1.2",
     "esbuild": "^0.27.0",
     "eslint": "^9.39.1",
+    "globals": "^17.3.0",
     "jest": "^30.2.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
